external-crates/move/move-compiler/tests/move_2024/naming/use_fun_with_builtin.exp
error[E02017]: invalid 'use fun' declaration
  ┌─ tests/move_2024/naming/use_fun_with_builtin.move:2:5
  │
2 │     use fun freeze as vector.freeze;
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid 'use fun'. Cannot associate a builtin function as a method for a type

